--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^3.23.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
