--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gen-env": "tools/gen-env-template dev",
+    "gen-env-prod": "tools/gen-env-template prod"
   },
   "author": "",
   "license": "ISC"
