--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
     "ts-node": "^10.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   }
 }
