fixed toBeInTheDocument not found error

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,5 +23,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "getScopeCategories.js"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "types": ["node", "jest", "@testing-library/jest-dom"],
 }
