--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/testing-library__jest-dom": "^6.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
@@ -33,7 +34,6 @@
 		"vite": "^4.3.9"
 	},
 	"jest": {
-		"preset": "ts-jest",
-		"testEnvironment": "jsdom"
-	}
+    "verbose": true
+  }
 }
