--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"serve": "^14.2.0"
 	},
 	"devDependencies": {
+		"@babel/preset-react": "^7.22.5",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
 		"@types/testing-library__jest-dom": "^6.0.0",
@@ -34,6 +35,6 @@
 		"vite": "^4.3.9"
 	},
 	"jest": {
-    "verbose": true
-  }
+		"verbose": true
+	}
 }
