--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,40 +1,51 @@
 {
-	"name": "frontend",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@uiw/react-md-editor": "^3.23.3",
-		"firebase": "^10.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-google-button": "^0.7.2",
-		"react-icons": "^4.10.1",
-		"rehype-sanitize": "^5.0.1",
-		"serve": "^14.2.0"
-	},
-	"devDependencies": {
-		"@babel/preset-react": "^7.22.5",
-		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11",
-		"@types/testing-library__jest-dom": "^6.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.59.0",
-		"@typescript-eslint/parser": "^5.59.0",
-		"@vitejs/plugin-react": "^4.0.0",
-		"eslint": "^8.38.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
-		"react-router-dom": "^6.14.1",
-		"typescript": "^5.0.2",
-		"vite": "^4.3.9"
-	},
-	"jest": {
-		"verbose": true
-	}
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@uiw/react-md-editor": "^3.23.3",
+    "firebase": "^10.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-google-button": "^0.7.2",
+    "react-icons": "^4.10.1",
+    "rehype-sanitize": "^5.0.1",
+    "serve": "^14.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "jest-environment-jsdom": "^29.6.2",
+    "react-router-dom": "^6.14.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.3.9"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.ts",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.ts",
+      "^react($|/.+)": "<rootDir>/node_modules/react$1",
+      "^test-utils$": "<rootDir>/test/test-utils.tsx"
+    },
+    "verbose": true
+  }
 }
