--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^29.5.3",
     "@uiw/react-md-editor": "^3.23.3",
     "firebase": "^10.0.0",
     "react": "^18.0.0",
