--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/qrcode": "^1.5.1",
     "@types/uuid": "^9.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
+    "qrcode": "^1.5.3",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
