--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "./node_modules/.bin/jest --passWithNoTests --verbose test"
   },
   "dependencies": {
-    "@types/jest": "^29.5.3",
     "@uiw/react-md-editor": "^3.23.3",
     "firebase": "^10.0.0",
     "react": "^18.0.0",
@@ -21,9 +21,12 @@
     "serve": "^14.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/react-dom": "^18.2.7",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -32,6 +35,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.2",
     "react-router-dom": "^6.14.1",
     "ts-node": "^10.9.1",
