fix breaking change in react-md-editor

--- a/.github/workflows/frontend-build-and-test.yaml
+++ b/.github/workflows/frontend-build-and-test.yaml
@@ -21,6 +21,6 @@ jobs:
         run: npm run build
         working-directory: frontend
       - name: Run unit tests
-        run: jest test
+        run: npm test
         working-directory: frontend
 
