--- a/.github/workflows/frontend-build-and-test.yaml
+++ b/.github/workflows/frontend-build-and-test.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '18' # Set the desired Node.js version here
       - name: Install frontend dependencies
-        run: npm install
+        run: npm install --include=dev
         working-directory: frontend
       - name: Build frontend
         run: npm run build
