Amended the frontend build and test action to run on master too

--- a/.github/workflows/frontend-build-and-test.yaml
+++ b/.github/workflows/frontend-build-and-test.yaml
@@ -4,6 +4,12 @@ on:
     paths:
       - 'frontend/**'
 
+  push:
+    branches:
+      - master
+    paths:
+      - 'frontend/**'
+
 jobs:
   build-and-test-frontend:
     runs-on: ubuntu-latest
